--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.3.8",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
